debhelper (7.4.16) UNRELEASED; urgency=low

  * Updated French translation.
  * makefile buildsystem: Chomp output during test for full compatability
    with debhelper 7.4.11. Closes: #570503
  * dh_install: Now --list-missing and --fail-missing are useful even when
    not all packages are acted on (due to architecture limits or flags).
    Closes: #570373
  * Typo. Closes: #571968

 -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 17:53:27 -0500

debhelper (7.4.15) unstable; urgency=low

  * The fix for #563557 caused some new trouble involving makefile
    that misbehave when stderr is closed. Reopen it to /dev/null
    when testing for the existance of a makefile target. Closes: #570443 

 -- Joey Hess <joeyh@debian.org>  Thu, 18 Feb 2010 16:37:34 -0500

debhelper (7.4.14) unstable; urgency=low

  * dh: Disable option bundling to avoid mis-parsing bundled options such
    as "-Bpython-support". Closes: #570039

 -- Joey Hess <joeyh@debian.org>  Tue, 16 Feb 2010 14:47:10 -0500

debhelper (7.4.13) unstable; urgency=low

  * dh_compress: Avoid compressing images in /usr/share/info. Closes: #567586
  * Fix handling of -O with options specified by commands. Closes: #568081

 -- Joey Hess <joeyh@debian.org>  Tue, 02 Feb 2010 12:15:41 -0500

debhelper (7.4.12) unstable; urgency=low

  * dh_bugfiles: Doc typo. Closes: #563269
  * makefile: Support the (asking for trouble) case of MAKE being set to
    something with a space in it. Closes: #563557
  * Fix warning about unknown options passed to commands in override targets.
  * Add -O option, which can be used to pass options to commands, ignoring
    options that they do not support.
  * dh: Use -O to pass user-specified options to the commands it runs.
    This solves the problem with passing "-Bbuild" to dh, where commands
    that do not support -B would see a bogus -u option. Closes: #541773
    (It also ensures that the commands dh prints out can really be run.)