@@ -235,7 +235,9 @@ getpackages($type)
 	Returns a list of packages in the control file.
 	Pass "arch" or "indep" to specify arch-dependent or
 	-independent. If nothing is specified, returns all
-	packages.
+	packages (including packages that are not built
+	for this architecture). Pass "both" to get the union
+	of "arch" and "indep" packages.
 	As a side effect, populates %package_arches and %package_types with
 	the types of all packages (not only those returned).
 inhibit_log()
